# pdfimposer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: example.py
src/: pdfimposer.py
src/pdfimposer/: __init__.py  _constants.py  _convenience.py  _errors.py
src/pdfimposer/_converters/: _abstract_converter.py  _file_converter.py  _stream_converter.py
