[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pdfimposer"
dynamic = ["version"]
description = "Basic imposition for PDF documents"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12"
license = {file = "LICENSE"}
keywords = []
authors = [
    { name = "PD Hall", email = "20580126+pdhall99@users.noreply.github.com" },
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "pypdf",
]

[project.urls]
Homepage = "https://github.com/pdhall99/pdfimposer"

[tool.hatch.build.hooks.vcs]
version-file = "src/pdfimposer/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pdfimposer"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[tool.hatch.metadata.hooks.vcs]

[tool.hatch.envs.hatch-static-analysis]
dependencies = ["ruff==0.4.5"]

[tool.hatch.envs.hatch-test]
dependencies = ["pytest"]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.12", "3.13", "3.14"]

[tool.hatch.envs.pre-commit]
skip-install = true
dependencies = ["pre-commit"]

[tool.hatch.envs.pre-commit.scripts]
run = "pre-commit run --all-files {args}"

[tool.hatch.envs.types]
extra-dependencies = [
    "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pdfimposer tests}"

[tool.coverage.run]
source_pkgs = ["pdfimposer", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
pdfimposer = ["src/pdfimposer", "*/pdfimposer/src/pdfimposer"]
tests = ["tests", "*/pdfimposer/tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src"]

[tool.ruff.lint.isort]
known-first-party = ["pdfimposer"]

[tool.ruff.lint]
select = ["D", "E", "F", "I", "U", "W"]
ignore = ["D10", "D205"]

[tool.ruff.lint.pydocstyle]
convention = "google"
